refact html to pug, add event listners for chat window, refact some elements and css

--- a/blocks/auth/auth.pug
+++ b/blocks/auth/auth.pug
@@ -1,3 +1,14 @@
-form.auth.pure-form
-    input.auth__name(type="text")
-    input.auth__pasword(type="password")
+- const authenticated = localStorage.getItem('authenticated');
+
+form.auth.pure-form(class=authenticated ? 'auth__auth-hide' : '')
+    input.auth__name(
+        type="text"
+        placeholder="Login"
+        )
+    input.auth__password(
+        type="password"
+        placeholder="Password"
+        )
+    button.auth__submit.pure-button.pure-button-primary(
+        type="submit"
+        ) Sign in
