--- a/blocks/chat/chat.pug
+++ b/blocks/chat/chat.pug
@@ -1,4 +1,6 @@
-.chat
-    span.chat__title.chat__title_active
-    span.chat__message
-    span.chat__name
+- const authenticated = localStorage.getItem('authenticated');
+- const user = localStorage.getItem('user');
+if text
+    .chat.pure-u-1-2(class=!authenticated ? 'chat__chat-hide' : '')
+        span.chat__name= `${user}:`
+        span.chat__message= text
