--- a/style.css
+++ b/style.css
@@ -1,15 +1,37 @@
 .chat {
-  width: 300px;
+  width: 900px;
   margin: auto;
-  bakground-color: #19ff19;
+  background-color: #ffffff;
   color: #fff;
-  font-size: 14px;
-}
-.chat__title {
   font-size: 16px;
 }
 .chat__message {
-  color: #4d4;
+  color: #1a1cdd;
+}
+.chat__name {
+  margin-right: 5px;
+  color: crimson;
+}
+.chat__chat-hide {
+  display: none;
+}
+
+.auth {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.auth__name {
+  margin-top: 10px;
+}
+.auth__password {
+  margin-top: 10px;
+}
+.auth__submit {
+  margin-top: 10px;
+}
+.auth__auth-hide {
+  display: none;
 }
 
 .button-success,
@@ -26,6 +48,21 @@
   /* this is a green */
 }
 
+.message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.message__input {
+  margin-top: 10px;
+}
+.message__button {
+  margin-top: 10px;
+}
+.message__message-hide {
+  display: none;
+}
+
 body {
   padding-left: 20px;
   padding-right: 20px;
@@ -37,4 +74,9 @@ body {
 h1 {
   color: #00008b;
   text-align: center;
+}
+
+.chat-container {
+  display: flex;
+  flex-direction: column;
 }
