--- a/blocks/message/message.scss
+++ b/blocks/message/message.scss
@@ -1,12 +1,30 @@
 .button-success,
- .button-error,
- .button-warning,
- .button-secondary {
-     color: white;
-     border-radius: 4px;
-     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
- }
+.button-error,
+.button-warning,
+.button-secondary {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
 
 .button-success {
     background: rgb(28, 184, 65); /* this is a green */
+}
+
+.message {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__input {
+        margin-top: 10px;
+    }
+
+    &__button {
+        margin-top: 10px;
+    }
+
+    &__message-hide {
+        display: none;
+    }
 }
