--- a/blocks/auth/auth.pug
+++ b/blocks/auth/auth.pug
@@ -1,6 +1,4 @@
-- const authenticated = localStorage.getItem('authenticated');
-
-form.auth.pure-form(class=authenticated ? 'auth__auth-hide' : '')
+form.auth.pure-form
     input.auth__name(
         type="text"
         placeholder="Login"
