--- a/blocks/message/message.pug
+++ b/blocks/message/message.pug
@@ -1,5 +1,4 @@
-- const authenticated = localStorage.getItem('authenticated');
 
-form.message.pure-form(class=!authenticated ? 'message__message-hide' : '')
+form.message.pure-form
     textarea.message__input.pure-input-1-2(placeholder="Add your message here...")
     button.message__button.button-success.pure-button Send
